# deepworm

./: .deepworm-session-find-me-eligile-countries-and-states-and-hteir-adv.json  .deepworm-session-what-is-python.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _rewrite_readme.py  demo.html  demo.tape  pyproject.toml
deepworm/: __init__.py  __main__.py  annotations.py  async_api.py  audit.py  batch.py  cache.py  caching.py  chain.py  citations.py  cli_helpers.py  compare.py  compliance.py  concurrency.py  config.py  credibility.py  crossref.py  data_pipeline.py  diagnostics.py  diff.py  events.py  exceptions.py  export.py  extraction.py  footnotes.py  formatter.py  glossary.py  graph.py  history.py  hooks.py  http_middleware.py  i18n.py  keywords.py  languages.py  links.py  llm.py  log.py  metrics.py  notion.py  outline.py  (+34 more)
examples/: async_research.py  basic_research.py  custom_config.py  event_monitoring.py  fastapi_server.py  html_export.py  plugin_usage.py  save_to_file.py
scripts/: demo_graph.py  demo_polish.py  demo_research.py
tests/: test_annotations.py  test_async.py  test_audit.py  test_batch.py  test_cache.py  test_caching.py  test_chain.py  test_citations.py  test_cli.py  test_cli_helpers.py  test_compliance.py  test_concurrency.py  test_config.py  test_credibility.py  test_crossref.py  test_data_pipeline.py  test_diagnostics.py  test_diff.py  test_events.py  test_exceptions.py  test_export.py  test_extraction.py  test_footnotes.py  test_formatter.py  test_glossary.py  test_graph.py  test_history.py  test_hooks.py  test_http_middleware.py  test_i18n.py  test_keywords.py  test_languages.py  test_links.py  test_llm.py  test_log.py  test_metrics.py  test_notion.py  test_outline.py  (+34 more)
(+11 files in other folders)
